--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="main.css"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Pedro Garcia</title>
 </head>
-<body class="w-fit">
+<body class="w-fit lg:w-full">
     <nav id="main-header" class="h-fit grid">
         <div class="px-6">
             <div class="mx-auto gap-x-96 place-content-center">
@@ -27,8 +28,8 @@
     <main>
         
         <div class="bg-cyan-800 h-fit">
-            <div class="filter-5">
-                <div class="container text-8xl p-6 md:p-28 py-28 md:py-40 md:pt-48 grid md:grid-cols-2 mx-auto gap-3">
+            <div class="filter-6">
+                <div class="container text-8xl p-6 md:p-28 py-28 md:py-48 grid md:grid-cols-2 mx-auto gap-3">
                     <div>
                         <div class="grid grid-cols-1 place-content-center">
                             <h1 class="text-white mx-6 md:mx-0 font-bold">Hola</h1>
@@ -40,10 +41,10 @@
                             <a href="https://www.linkedin.com/in/pedro-garcia-949835205/" target="_blank" class="social-link w-10 h-10 mx-auto md:mx-0 rounded-lg cursor-pointer"><img src="./images/icons/linkedin.svg"/></a>
                             <a href="https://www.instagram.com/pedrogarcia49/"  target="_blank" class="social-link w-10 h-10 mx-auto md:mx-0 rounded-lg cursor-pointer"><img src="./images/icons/instagram.svg"/></a>
                             <a href="https://github.com/pedrogarcia49"  target="_blank" class="social-link w-10 h-10 mx-auto md:mx-0 rounded-lg cursor-pointer"><img src="./images/icons/github.svg"/></a>
-                            <a href="mailto:pedrogarciaok9@gmail.com"  target="_blank" class="social-link w-10 h-10 mx-auto md:mx-0 rounded-lg cursor-pointer"><img src="./images/icons/mail.svg"/></a>
+                            <a href="mailto:contacto@pedrogarciaweb.com"  target="_blank" class="social-link w-10 h-10 mx-auto md:mx-0 rounded-lg cursor-pointer"><img src="./images/icons/mail.svg"/></a>
                         </div>
                     </div>
-
+        
                     <div class="w-full grid place-content-center mt-6 md:-mt-24 lg:mt-0">
                         <div id="profile-container" class="w-3/4 md:w-full lg:w-2/3 h-fit mx-auto">
                             <img id="profile-image" src="./images/pedro.png"/>
@@ -51,92 +52,139 @@
                     </div>
                     
                 </div>
-
+        
             </div>
         </div>
 
-        <div class="h-fit py-28 bg-cyan-500 text-white grid place-items-center" >
-            <h2 class="text-5xl text-center mb-24 font-bold text-shadow-md">Tecnologías</h2>
-            <div class="text-xl p-4 w-full md:text-3xl lg:w-4/6 grid grid-cols-2 gap-4">
+        <div id="informacion" class="bg-cyan-500 text-white">
+            <div class="filter-3">
+                <div class="h-full container mx-auto pt-20 pb-44">
 
-                <div id="frontend-ctn" class="bg-teal-600 rounded-sm shadow-xl">
-                    <div class="bg-teal-700 rounded-t-sm w-full p-2 h-14 text-3xl md:text-4xl text-center">
-                        <label class="text-amber-400 font-semibold">Front-end</label>
+                    <div class="mb-16">
+                        <h2 class="text-5xl text-center font-bold text-shadow-md">Información</h2>
                     </div>
-                    <ul id="frontend" class="p-8">
-                        <li id="li-html" class="ml-8 my-2">HTML</li>
-                        <li id="li-css" class="ml-8 my-2">CSS</li>
-                        <li id="li-js" class="ml-8 my-2">JavaScript</li>
-                        <li id="li-react" class="ml-8 my-2">React</li>
-                        <li id="li-bootstrap" class="ml-8 my-2">Bootstrap</li>
-                        <li id="li-tailwind" class="ml-8 my-2">Tailwind</li>
-                    </ul>
-                </div>
+                    
+                    <div class="filter-blur-solid rounded-sm m-2 p-8 lg:grid grid-cols-2 gap-2">
+                        <div class="mb-12 columns-1 text-xl my-auto md:text-2xl p-4 ">
+                            <p class="mb-4">Hola, soy Pedro! Desarrollador web con sede en Entre Ríos, Argentina <img class="inline-block mx-1 w-8" src="./images/icons/argentina.png"/></p>
+                            <p class="mb-12">Conocedor de multiples tecnologías web en constante búsqueda de crecer profesionalmente. Apto para trabajar, en equipo tanto como individualmente, de forma remota o prescencial. De rápido aprendizaje y adhesión a proyectos.</p>
+                            <p>La web esta en constante cambio, hoy en día ya no es un conjunto de información en forma de texto plano, para realizar una aplicación web y concretar su despliegue de forma completa se requiere del conocimiento de una variedad de tecnologías. A continuacíon una lista de las tecnologías con las que trabajo.</p>
+                        </div>
+                        <div class="columns-1">
+                            <h3 class="text-4xl text-center mb-12 font-medium text-shadow-md">Tecnologías</h3>
+
+                            <div class="text-xl md:p-4 w-full mx-auto lg:text-3xl grid grid-cols-2 gap-4">
                 
-                <div id="backend-ctn" class="bg-cyan-600 rounded-sm shadow-xl">
-                    <div class="bg-cyan-700 rounded-t-sm w-full p-2 h-14 text-3xl md:text-4xl text-center">
-                        <label class="text-amber-400 font-semibold">Back-end</label>
+                                <div id="frontend-ctn" class="bg-teal-600 rounded-sm shadow-xl">
+                                    <div class="bg-teal-700 rounded-t-sm w-full p-2 h-14 text-3xl text-center">
+                                        <label class="text-amber-400 font-semibold">Front-end</label>
+                                    </div>
+                                    <ul id="frontend" class="p-8">
+                                        <li id="li-html" class="ml-8 my-2">HTML</li>
+                                        <li id="li-css" class="ml-8 my-2">CSS</li>
+                                        <li id="li-js" class="ml-8 my-2">JavaScript</li>
+                                        <li id="li-react" class="ml-8 my-2">React</li>
+                                        <li id="li-bootstrap" class="ml-8 my-2">Bootstrap</li>
+                                        <li id="li-tailwind" class="ml-8 my-2">Tailwind</li>
+                                    </ul>
+                                </div>
+                                
+                                <div id="backend-ctn" class="bg-cyan-600 rounded-sm shadow-xl">
+                                    <div class="bg-cyan-700 rounded-t-sm w-full p-2 h-14 text-3xl text-center">
+                                        <label class="text-amber-400 font-semibold">Back-end</label>
+                                    </div>
+                                    <ul id="backend" class="p-8">
+                                        <li id="li-node" class="ml-8 my-2">NodeJs</li>
+                                        <li id="li-express" class="ml-8 my-2">Express</li>
+                                        <li id="li-mysql" class="ml-8 my-2">MySQL</li>
+                                        <li id="li-nginx" class="ml-8 my-2">Nginx</li>
+                                    </ul>
+                                </div>
+                                
+                            </div>
+
+                        </div>
                     </div>
-                    <ul id="backend" class="p-8">
-                        <li id="li-node" class="ml-8 my-2">NodeJs</li>
-                        <li id="li-express" class="ml-8 my-2">Express</li>
-                        <li id="li-mysql" class="ml-8 my-2">MySQL</li>
-                        <li id="li-nginx" class="ml-8 my-2">Nginx</li>
-                    </ul>
                 </div>
-                
             </div>
     
         </div>
 
-        <div class="p-4 bg-cyan-700">
-            <div class="h-48 pt-14">
-                <h2 class="text-6xl text-center my-auto font-bold text-shadow-md text-white">Proyectos</h>
-            </div>
-            <div class="h-fit w-full p-2 grid mx-auto lg:grid-cols-2 gap-14">
-                
-                <div id="gym-app" class="bg-slate-300">
-                    <div id="project-filter" class="hover:cursor-pointer shadow-xl filter-7 bg-black grid place-content-start">
-                        <div class="text-5xl p-10 mt-80 text-amber-300">
-                            <h1 class="text-5xl font-bold">Aplicacion gimnasio</h1>
-                            <p class="text-3xl mt-10 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
-                        </div>
+        <div id="proyectos" class="h-fit  grid place-content-center text-white bg-cyan-700">
+            <div class="filter-blur pb-28">
+
+                <div class="w-fit p-2 pt-16 md:p-24 md:pt-20 md:pb-4 md:px-4">
+                    <div class="mb-12">
+                        <h2 class="text-5xl text-center font-bold text-shadow-md">Proyectos</h2>
                     </div>
+                    <div class="slider-proyectos md:p-2 md:px-2 lg:px-4 h-full">
     
-                </div>
+                        <div class="proyectos">
     
-                <div id="simon" class="bg-slate-300">
-                    <div id="project-filter" class="hover:cursor-pointer shadow-xl filter-7 bg-black grid place-content-start">
-                        <div class="text-5xl p-10 mt-80 text-amber-300">
-                            <h1 class="text-5xl font-bold">Juego Simon</h1>
-                            <p class="text-3xl mt-10 text-white">Version online de el conocido juego de mesa</p>
+                            <div class="proyecto hidden">
+                                <div class="text-xl text-black bg-amber-400 w-fit px-2">1 / 3</div>
+                                <div class="grid grid-cols-2 shadow-xl">
+                                    <div class="container w-full">
+                                        <img src="images/gym-app.png" class="proyecto-img rounded-l-sm h-full"/>
+                                    </div>
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                        <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Aplicacion gimnasio</h3>
+                                        <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
+                                    </div>
+                                </div>
+                            </div>
+        
+                            <div class="proyecto hidden">
+                                <div class="text-xl text-black bg-amber-400 w-fit px-2">2 / 3</div>
+                                <div class="grid grid-cols-2 shadow-xl">
+                                    <div class="container w-full">
+                                        <img src="images/simon.png" class="proyecto-img  rounded-l-sm h-full"/>
+                                    </div>
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                        <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Simon</h3>
+                                        <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Version online del conocido juego de mesa</p>
+                                    </div>
+                                </div>
+                            </div>
+        
+                            <div class="proyecto hidden">
+                                <div class="text-xl text-black bg-amber-400 w-fit px-2">3 / 3</div>
+                                <div class="grid grid-cols-2 shadow-xl">
+                                    <div class="container w-full">
+                                        <img src="images/tictactoe.png" class="proyecto-img   rounded-l-sm h-full"/>
+                                    </div>
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                        <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Tic-Tac-Toe</h3>
+                                        <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Tres en linea tradicional</p>
+                                    </div>
+                                </div>
+                            </div>
+    
                         </div>
+    
+                        <div class="columns-2 gap-0">
+                            <div id="slide-left" class="p-3 my-auto shadow-xl rounded-bl-md bg-slate-700 hover:bg-slate-800  bg-opacity-80 hover:bg-opacity-80 grid place-content-center text-2xl cursor-pointer"> <</div>
+        
+                            <div id="slide-right" class="p-3 my-auto shadow-xl rounded-br-md bg-slate-700 hover:bg-slate-800 bg-opacity-80 hover:bg-opacity-80 grid place-content-center text-2xl cursor-pointer"> ></div>
+                        </div>
+    
+                        
                     </div>
                 </div>
-    
-                <div id="tictactoe" class="bg-slate-300">
-                    <div id="project-filter" class="hover:cursor-pointer  shadow-xl filter-7 bg-black grid place-content-start">
-                        <div class="text-5xl p-10 mt-80 text-amber-300">
-                            <h1 class="text-5xl font-bold">Juego Tic-Tac-Toe</h1>
-                            <p class="text-3xl mt-10 text-white">Tres en linea tradicional</p>
-                        </div>
-                    </div>
-                </div>
-    
             </div>
         </div>
         
-    <div class="h-fit bg-cyan-400 text-white py-12 grid place-content-center">
-        <h1 class="text-5xl text-center font-semibold text-shadow-md">Contacto</h1>
+    <div class="h-fit bg-cyan-400 text-white py-12 p-6 grid place-content-center">
+        <h2 class="text-5xl text-center font-semibold text-shadow-md">Contacto</h2>
         <div class="p-2 grid">
             <div class="mt-12 bg-cyan-300 shadow-md w-fit p-16 py-24 rounded-sm">
                 <form class="grid gap-4 text-xl text-neutral-600" action="https://formsubmit.co/contacto@pedrogarciaweb.com" method="POST">
                     <label>Nombre completo</label>
-                    <input class="p-2 pr-24 block" type="text" name="name" placeholder="Tu nombre"/>
+                    <input class="p-2 pr-24 block" type="text" name="name" placeholder="Tu nombre" required/>
                     <label>Correo electronico</label>
-                    <input class="p-2 pr-24 block" type="email" name="email" placeholder="nombre@email.com"/>
+                    <input class="p-2 pr-24 block" type="email" name="email" placeholder="nombre@email.com" required/>
                     <label>Mensaje</label>
-                    <textarea class="p-2 pr-24 pb-4 block" name="message" placeholder="Hola! este es un mensaje de ejemplo"></textarea>
+                    <textarea class="p-2 pr-24 pb-4 block" name="message" placeholder="Hola! este es un mensaje de ejemplo" required></textarea>
                     <button id="submit" class="bg-amber-400 px-24 shadow-md rounded-sm mt-4 p-1 text-black" type="submit">Enviar</button>
                 </form>
             </div>
@@ -145,4 +193,5 @@
     </main>
 </body>
 <script src="./main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </html>
