--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
                     <h3 class="md:text-3xl text-2xl text-cyan-300 whitespace-nowrap mx-auto md:-ml-24">Pedro <span class="text-cyan-400">Garcia</span></h3>
                 </div>
                 <ul class="flex place-content-center w-full md:w-auto float-left mx-auto md:mt-0 md:ml-12 lg:ml-24 space-x-3 md:space-x-6  text-white font-medium">
-                    <li id="nav-item1" class="nav-item bg-cyan-600 p-4 rounded-sm shadow-md">Tecnologías</li>
+                    <li id="nav-item1" class="nav-item bg-cyan-600 p-4 rounded-sm shadow-md">Información</li>
                     <li id="nav-item2" class="nav-item bg-cyan-600 p-4 rounded-sm shadow-md">Proyectos</li>
                     <li id="nav-item3" class="nav-item bg-cyan-600 p-4 rounded-sm shadow-md">Contacto</li>
                 </ul>
@@ -29,7 +29,7 @@
         
         <div class="bg-cyan-800 h-fit">
             <div class="filter-6">
-                <div class="container text-8xl p-6 md:p-28 py-28 md:py-48 grid md:grid-cols-2 mx-auto gap-3">
+                <div class="container text-8xl p-6 md:p-28 py-28 md:py-44 grid md:grid-cols-2 mx-auto gap-3">
                     <div>
                         <div class="grid grid-cols-1 place-content-center">
                             <h1 class="text-white mx-6 md:mx-0 font-bold">Hola</h1>
@@ -58,17 +58,18 @@
 
         <div id="informacion" class="bg-cyan-500 text-white">
             <div class="filter-3">
-                <div class="h-full container mx-auto pt-20 pb-44">
+                <div class="h-full container mx-auto pt-20 pb-24 md:pb-32">
 
                     <div class="mb-16">
                         <h2 class="text-5xl text-center font-bold text-shadow-md">Información</h2>
                     </div>
                     
                     <div class="filter-blur-solid rounded-sm m-2 p-8 lg:grid grid-cols-2 gap-2">
-                        <div class="mb-12 columns-1 text-xl my-auto md:text-2xl p-4 ">
+                        <div class="mb-12 columns-1 text-xl grid place-content-center my-auto md:text-2xl p-4 ">
                             <p class="mb-4">Hola, soy Pedro! Desarrollador web con sede en Entre Ríos, Argentina <img class="inline-block mx-1 w-8" src="./images/icons/argentina.png"/></p>
-                            <p class="mb-12">Conocedor de multiples tecnologías web en constante búsqueda de crecer profesionalmente. Apto para trabajar, en equipo tanto como individualmente, de forma remota o prescencial. De rápido aprendizaje y adhesión a proyectos.</p>
-                            <p>La web esta en constante cambio, hoy en día ya no es un conjunto de información en forma de texto plano, para realizar una aplicación web y concretar su despliegue de forma completa se requiere del conocimiento de una variedad de tecnologías. A continuacíon una lista de las tecnologías con las que trabajo.</p>
+                            <p class="mb-6">Conocedor de multiples tecnologías web en constante búsqueda de crecer profesionalmente. Apto para trabajar, en equipo tanto como individualmente, de forma remota o prescencial. De rápido aprendizaje y adhesión a proyectos.</p>
+                            <a href="./files/cv.pdf" download="Pedro Garcia" class="bg-amber-400 hover:bg-amber-500 cursor-pointer text-center mt-4 mb-12 p-1 text-black">Descargar CV <img class=" w-8 inline-block" src="./images/icons/download.svg"/></a>
+                            <p>La web esta en constante cambio, hoy en día ya no es un conjunto de información en forma de texto plano, para realizar una aplicación web y concretar su despliegue de forma completa se requiere del conocimiento de una variedad de tecnologías. A continuacíon una lista de las tecnologías con las que trabajo:</p>
                         </div>
                         <div class="columns-1">
                             <h3 class="text-4xl text-center mb-12 font-medium text-shadow-md">Tecnologías</h3>
@@ -97,6 +98,7 @@
                                         <li id="li-node" class="ml-8 my-2">NodeJs</li>
                                         <li id="li-express" class="ml-8 my-2">Express</li>
                                         <li id="li-mysql" class="ml-8 my-2">MySQL</li>
+                                        <li id="li-bash" class="ml-8 my-2">Bash</li>
                                         <li id="li-nginx" class="ml-8 my-2">Nginx</li>
                                     </ul>
                                 </div>
@@ -110,37 +112,38 @@
     
         </div>
 
-        <div id="proyectos" class="h-fit  grid place-content-center text-white bg-cyan-700">
+        <div id="proyectos" class="grid place-content-center text-white bg-cyan-700">
             <div class="filter-blur pb-28">
 
                 <div class="w-fit p-2 pt-16 md:p-24 md:pt-20 md:pb-4 md:px-4">
                     <div class="mb-12">
                         <h2 class="text-5xl text-center font-bold text-shadow-md">Proyectos</h2>
                     </div>
-                    <div class="slider-proyectos md:p-2 md:px-2 lg:px-4 h-full">
+                    <div class="h-full md:p-2 md:px-2 lg:px-4">
     
                         <div class="proyectos">
     
                             <div class="proyecto hidden">
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">1 / 3</div>
-                                <div class="grid grid-cols-2 shadow-xl">
+                                <div class="md:grid grid-cols-2 shadow-xl">
                                     <div class="container w-full">
                                         <img src="images/gym-app.png" class="proyecto-img rounded-l-sm h-full"/>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Aplicacion gimnasio</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
+                                        <a class="bg-amber-400 hover:bg-amber-500 cursor-pointer text-center mt-6 mb-1 lg:mt-20 xl:mt-60 p-1 xl:p-1.5 text-black">Probar demo</a>
                                     </div>
                                 </div>
                             </div>
         
                             <div class="proyecto hidden">
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">2 / 3</div>
-                                <div class="grid grid-cols-2 shadow-xl">
+                                <div class="md:grid grid-cols-2 shadow-xl">
                                     <div class="container w-full">
                                         <img src="images/simon.png" class="proyecto-img  rounded-l-sm h-full"/>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Simon</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Version online del conocido juego de mesa</p>
                                     </div>
@@ -149,11 +152,11 @@
         
                             <div class="proyecto hidden">
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">3 / 3</div>
-                                <div class="grid grid-cols-2 shadow-xl">
+                                <div class="md:grid grid-cols-2 shadow-xl">
                                     <div class="container w-full">
                                         <img src="images/tictactoe.png" class="proyecto-img   rounded-l-sm h-full"/>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-96 lg:h-full">
+                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Tic-Tac-Toe</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Tres en linea tradicional</p>
                                     </div>
