--- a/public/index.css
+++ b/public/index.css
@@ -526,15 +526,15 @@ video {
   }
 }
 
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
 @media (min-width: 1536px) {
   .container {
     max-width: 1536px;
+  }
+}
+
+@media (min-width: 1780px) {
+  .container {
+    max-width: 1780px;
   }
 }
 
@@ -574,6 +574,21 @@ video {
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+
+.mx-24 {
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.mx-40 {
+  margin-left: 10rem;
+  margin-right: 10rem;
 }
 
 .mt-4 {
@@ -616,6 +631,18 @@ video {
   margin-top: 3rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .block {
   display: block;
 }
@@ -653,8 +680,8 @@ video {
   height: 3.5rem;
 }
 
-.h-96 {
-  height: 24rem;
+.h-64 {
+  height: 16rem;
 }
 
 .w-full {
@@ -676,6 +703,18 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .cursor-pointer {
@@ -852,16 +891,16 @@ video {
   padding: 3rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
 
 .p-16 {
   padding: 4rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .py-28 {
@@ -900,6 +939,10 @@ video {
 
 .pb-44 {
   padding-bottom: 11rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .pb-28 {
@@ -1036,6 +1079,11 @@ video {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-amber-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
 }
@@ -1048,6 +1096,11 @@ video {
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .md\:mx-40 {
+    margin-left: 10rem;
+    margin-right: 10rem;
   }
 
   .md\:-mt-24 {
@@ -1078,12 +1131,20 @@ video {
     margin-left: 3rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:inline {
     display: inline;
   }
 
   .md\:grid {
     display: grid;
+  }
+
+  .md\:h-full {
+    height: 100%;
   }
 
   .md\:w-full {
@@ -1120,6 +1181,10 @@ video {
     padding: 0.5rem;
   }
 
+  .md\:p-32 {
+    padding: 8rem;
+  }
+
   .md\:py-48 {
     padding-top: 12rem;
     padding-bottom: 12rem;
@@ -1133,6 +1198,20 @@ video {
   .md\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+  }
+
+  .md\:py-40 {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+
+  .md\:py-44 {
+    padding-top: 11rem;
+    padding-bottom: 11rem;
+  }
+
+  .md\:pb-32 {
+    padding-bottom: 8rem;
   }
 
   .md\:pt-20 {
@@ -1165,6 +1244,11 @@ video {
 }
 
 @media (min-width: 1224px) {
+  .lg\:mx-40 {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -1173,12 +1257,24 @@ video {
     margin-left: 6rem;
   }
 
-  .lg\:grid {
-    display: grid;
+  .lg\:mt-32 {
+    margin-top: 8rem;
   }
 
-  .lg\:h-full {
-    height: 100%;
+  .lg\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .lg\:mt-16 {
+    margin-top: 4rem;
+  }
+
+  .lg\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .lg\:grid {
+    display: grid;
   }
 
   .lg\:w-1\/2 {
@@ -1215,5 +1311,23 @@ video {
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+}
+
+@media (min-width: 1780px) {
+  .xl\:mt-60 {
+    margin-top: 15rem;
+  }
+
+  .xl\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .xl\:p-1\.5 {
+    padding: 0.375rem;
+  }
+
+  .xl\:p-1 {
+    padding: 0.25rem;
   }
 }
