--- a/views/index.html
+++ b/views/index.html
@@ -119,44 +119,50 @@
                     <div class="mb-12">
                         <h2 class="text-5xl text-center font-bold text-shadow-md">Proyectos</h2>
                     </div>
-                    <div class="h-full md:p-2 md:px-2 lg:px-4">
+                    <div class="h-full md:p-2 lg:px-4">
     
                         <div class="proyectos">
     
-                            <div class="proyecto hidden">
+                            <div class="hidden" proyecto>
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">1 / 3</div>
-                                <div class="md:grid grid-cols-2 shadow-xl">
-                                    <div class="container w-full">
-                                        <img src="images/gym-app.png" class="proyecto-img rounded-l-sm h-full"/>
+                                <div class="lg:grid grid-cols-2 shadow-xl">
+                                    <div proyecto-ctn class="flex place-content-center">
+                                        <video autoplay loop muted playsinline src="/video/gym-app"></video>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
+                                    <div class="project-filter rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Aplicacion gimnasio</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
-                                        <a class="bg-amber-400 hover:bg-amber-500 cursor-pointer text-center mt-6 mb-1 lg:mt-20 xl:mt-60 p-1 xl:p-1.5 text-black">Probar demo</a>
+                                        <div class="grid gap-2 mt-6 mb-1 lg:mt-20 xl:mt-56">
+                                            <a href="https://github.com/pedrogarcia49/gym-app" target="blank__" class="bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Ver repositorio</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
         
-                            <div class="proyecto hidden">
+                            <div class="hidden" proyecto >
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">2 / 3</div>
-                                <div class="md:grid grid-cols-2 shadow-xl">
-                                    <div class="container w-full">
-                                        <img src="images/simon.png" class="proyecto-img  rounded-l-sm h-full"/>
+                                <div class="lg:grid grid-cols-2 shadow-xl">
+                                    <div proyecto-ctn class="flex place-content-center">
+                                        <video autoplay loop muted playsinline src="/video/simon"></video>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
+                                    <div class="project-filter w-full rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Simon</h3>
-                                        <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Version online del conocido juego de mesa</p>
+                                        <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
+                                        <div class="grid grid-cols-2 gap-2 mt-6 mb-1 lg:mt-20 xl:mt-56">
+                                            <a href="http://localhost:3003/simon" target="blank__" class="block columns-1 bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Jugar!</a>
+                                            <a href="https://github.com/pedrogarcia49/gym-app" target="blank__" class="block columns-1 bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Ver repositorio</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
         
-                            <div class="proyecto hidden">
+                            <div class="hidden" proyecto >
                                 <div class="text-xl text-black bg-amber-400 w-fit px-2">3 / 3</div>
                                 <div class="md:grid grid-cols-2 shadow-xl">
-                                    <div class="container w-full">
+                                    <div class="container w-full" proyecto-img-ctn>
                                         <img src="images/tictactoe.png" class="proyecto-img   rounded-l-sm h-full"/>
                                     </div>
-                                    <div id="project-filter" class="rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
+                                    <div class="project-filter rounded-r-sm p-12 grid place-content-start h-64 md:h-full">
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Tic-Tac-Toe</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Tres en linea tradicional</p>
                                     </div>
