--- a/views/index.html
+++ b/views/index.html
@@ -149,7 +149,7 @@
                                         <h3 class="text-amber-400 text-2xl md:text-3xl lg:text-4xl font-bold">Juego Simon</h3>
                                         <p class="text-md md:text-lg lg:text-2xl mt-8 text-white">Aplicacion de gestion de usuarios para gimnasio con base de datos, sistema de suscripciones, busqueda y check-in para usuarios</p>
                                         <div class="grid grid-cols-2 gap-2 mt-6 mb-1 lg:mt-20 xl:mt-56">
-                                            <a href="http://localhost:3003/simon" target="blank__" class="block columns-1 bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Jugar!</a>
+                                            <a href="/simon" target="blank__" class="block columns-1 bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Jugar!</a>
                                             <a href="https://github.com/pedrogarcia49/gym-app" target="blank__" class="block columns-1 bg-amber-400 hover:bg-amber-500 cursor-pointer rounded-sm text-center p-1 xl:p-2 text-black">Ver repositorio</a>
                                         </div>
                                     </div>
